--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,8 +32,17 @@
         de leur toute première collection.
         </p>
       </div>
+    <div class="col-6 offset-3 py-3">
+      <h3 class="text-center">Want to keep up with the latest news ?</h3>
+      <form class="form-inline text-center px-3 mx-3">
+        <div class="form-group">
+          <label for="inputPassword2" class="sr-only" style="width: 200px !important">Email</label>
+          <input type="text" class="form-control" id="inputmail" placeholder="Email">
+        </div>
+        <button type="submit" class="btn btn-primary px-3 mx-3" style="width: 200px !important">Keep me updated</button>
+      </form>
     </div>
-
+    </div>
   </div>
 </div>
 
